<resources>
    <string name="app_name">My LoginApp</string>
    <string name="usernameHint">username</string>
    <string name="emailHint">email</string>
    <string name="passwordHint">password</string>
    <string name="signInBtn">Log in</string>
    <string name="signUpBtn">Sign up</string>
    <string name="SignUp_TextView">Don\'t have account? Sign up</string>
    <string name="SignIn_TextView">Already have account? Login</string>
    <string name="title_activity_send_message">SendMessage</string>
    <!--Strings used for activity Labels -->
    <string name="FriendsActivityLabel">Friends List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_message">Message</string>

</resources>