<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
<com.example.myloginapp.BackgroundVideoView
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/usernameHint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/hintXcolors" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/hintXcolors" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/hintXcolors" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="10dp"
            android:text="@string/signUpBtn"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/SignUp_SignInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:ems="12"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:text="@string/SignIn_TextView"
            android:textColor="@color/white"
            android:textColorHighlight="@color/purple_200" />


    </LinearLayout>

</RelativeLayout>